<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_blitzer">

    <fragment
        android:id="@+id/navigation_blitzer"
        android:name="com.example.radiositeblitzerscanner11.ui.blitzer.BlitzerFragment"
        android:label="@string/title_blitzer"
        tools:layout="@layout/fragment_blitzer" />

    <fragment
        android:id="@+id/navigation_traffic_jam"
        android:name="com.example.radiositeblitzerscanner11.ui.trafficjam.TrafficJamFragment"
        android:label="@string/title_traffic_jam"
        tools:layout="@layout/fragment_traffic_jam" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.radiositeblitzerscanner11.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>